@@ -1,1 +1,3 @@
 # DodgeGame
+
+The code is mess now. Either a new project or rewrite is required.
